# homelab

./: .gitignore  Pipfile  README.md  actual.yml  actual_inventory  ansible.cfg  build_images.sh  docker-compose.yml  new_nas.yml  new_nas_inventory  playbook.yml  pyproject.toml  requirements.yml  stream_icecast.sh
airsonic/: Dockerfile
coredns/: Corefile  nas.db
mopidy/: Dockerfile  entrypoint.sh  mopidy.conf  mopidy.conf.tmpl
mysql/: init.sql  rompr.sh
roles/auth/defaults/: main.yml
roles/auth/tasks/: keycloak.yml  ldap.yml  main.yml
roles/auth/templates/: keycloak.conf.j2  keycloak.service.j2  standalone.xml.j2
roles/backup/defaults/: main.yml
roles/backup/tasks/: main.yml
roles/backup/templates/: env.j2  restic-creds.txt.j2
roles/base/defaults/: main.yml
roles/base/files/: sysctl.conf  tmux.conf
roles/base/meta/: main.yml
roles/base/tasks/: main.yml
roles/base/templates/: backports.list.j2  fstab.j2  powertop.service.j2  wpa_supplicant.conf.j2  wpa_supplicant.service.j2
roles/common/defaults/: main.yml
roles/common/tasks/: main.yml
roles/dns/defaults/: main.yml
roles/dns/tasks/: main.yml
roles/dns/templates/: Corefile.j2  adguard.service.j2  adguard.yaml.j2  coredns.service.j2  nas.db.j2  vpn.db.j2
roles/email/defaults/: main.yml
roles/email/tasks/: main.yml  stalwart.yml  userli.yml
roles/email/templates/: 00-clamav-unofficial-sigs.conf.j2  (+35 more)
rompr/: Dockerfile  build.sh  nginx.conf
scripts/: base.py  update_media.py  update_photos.py
snapcast/: Dockerfile
transmission/: settings.json
vars/: playbook.yml  secure.yml
(+89 files in other folders)
